<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.12">
  <GVL Name="GVL_M1L0" Id="{c3e91af1-5ac0-497f-aea6-a43e8c284355}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL CONSTANT
	// Encoder reference values in counts = nm
	nYUP_ENC_REF : ULINT := 14760900;
	nYDWN_ENC_REF : ULINT := 13941900;
	nXUP_ENC_REF : ULINT := 24435400;
	nXDWN_ENC_REF : ULINT := 25239600;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>